--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
 
     .px2bMI{
         margin-right: 25px;
+        padding-bottom: unset !important;
     }
 
     .Opi0h3 svg{
@@ -61,6 +62,10 @@ body {
     .s8sRXo{
         font-size: 12px !important;
     }
+
+    .qa-i1X{
+        font-size: 12px !important;
+    }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
@@ -103,6 +108,8 @@ body {
         margin-top: 4px;
         font-size: 15px;
     }
+
+   
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -112,7 +119,6 @@ body {
 
     .px2bMI{
         margin-right: 25px;
-        font-size: 25px;
     }
 
     .Opi0h3 svg{
@@ -121,7 +127,7 @@ body {
     }
 
     .GizwIM{
-        font-size: 30px !important;
+        font-size: 25px !important;
         gap: 2px;
     }
 
@@ -432,8 +438,6 @@ body {
     vertical-align: middle
 }
 
-
-
 .bPJYL0 {
     -webkit-line-clamp: 2
 }
@@ -446,10 +450,8 @@ body {
     -webkit-box-orient: vertical
 }
 
-
-
 .qa-i1X {
-    margin-top: 8px;
+    /* margin-top: 8px; */
     font-size: 20px;
     /* line-height: 24px; */
     color: rgba(0,0,0,.54);
